    viewing the page, rather than the user who saved the page.  Example:
    {{template-name|~~~~}}
  * Use the wiki system directory for temp file storage in ImageIO processing
    to prevent errors on misconfigured systems.  Reported by jfbraz.
  * Validate that properties which must be numeric are set as numbers from
    Special:Admin.

Translation Updates:

  * Updated Chinese translations (hfl).
  * Updated French translations (Guillaume_FRANCOIS55).
  * Updated German translations (axelclk).
  * Updated Japanese translations (nattolover).
  * Updated Polish translations (dlpa).
  * Updated Russian translations (shar).


0.7.2
=====

New Features:

  * Updated spam filter patterns.

Bugfixes:

  * Fix missing edit toolbar during preview.  Reported by hanspeterklapf.
  * Fix MS SQL error when searching for user contributions (hanspeterklapf).
  * Fix MS SQL upgrade errors (hanspeterklapf).
  * Fix "array index '1' is invalid" error during setup with Resin 3.2.1.
    Reported by James.
  * Fix TOC rendering issue when depth exceeds the configured max depth.
  * Fix double-escaping of non-existent topic names when using URLs such as
    http://jamwiki.org/wiki/en/TestÜmlaut.  Reported by hanspeterklapf.
  * Fix breakage when moving topics containing special characters such as
    "TestÜmlaut".  Reported by hanspeterklapf.
  * Display any editable category topic text above the list of category items.
    Reported by axcelclk.
  * Fix failures when upgrading from versions earlier than 0.6.0.  Reported by
    Eric.
  * Groups were not being displayed on the Special:Roles page when no roles were
    assigned to the group.  Reported by hanspeterklapf.

Translation Updates:

  * Updated Chinese translations (hfl).
  * Updated French translations (Guillaume_FRANCOIS55).
  * Updated Russian translations (shar).


0.7.1
=====

New Features:

  * Upgrade to Lucene Search 2.4.1.

Bugfixes:

  * Search by login on the Special:Roles page returned no results for users